# urland

./: .clang-format  .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CHANGELOG.md  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  urland.sln  urland.vcxproj  urland.vcxproj.filters
.VSCodeCounter/2024-08-12_21-49-24/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
assets/: blocks.jsonc
assets/shaders/: default.frag  default.vert
assets/textures/: urland.aseprite
inc/components/: PlayerTag.h  RigidBody.h  Selectable.h  Stats.h  follow_camera.h  rigid_body.h
inc/core/: SpriteManager.h  constants.h  conversions.h  globals.h  sprite.h  sprite_manager.h
inc/game/: BlockInfo.h  block_info.h  game.h
inc/game/world/: block.h  chunk.h  generator.h  world.h
inc/systems/: FollowCameraSys.h  GravitySys.h  PlayerMoveSys.h  PlayerSys.h  RigidBodyCollisionSys.h  follow_camera_sys.h  gravity_sys.h  player_move_sys.h  rigidbody_col_sys.h
inc/util/: PathManager.h  RandomUtil.h
inc/util/debug/: DrawDebug.h  DrawYBlockHeightDebug.h  draw_debug_ui.h  draw_y_block_height_debug.h
include/components/: Camera.h  CharacterController.h  FollowCamera.h  RigidBody.h  SpriteComponent.h
include/components/tags/: PlayerTag.h
include/core/: Block.h  BlockRegistry.h  Chunk.h  Constants.h  Convertions.h  Scene.h  Sprite.h  SpriteManager.h  Texture2DAtlas.h  World.h
include/game/: DrawChunkGrid.h  Game.h  GameState.h
include/listeners/: CollisionListener.h
include/scenes/: GameScene.h  StartScene.h
include/systems/: CameraFollowPlayerSystem.h  CameraSystem.h  CharacterControlSystem.h  PhysicsSystem.h  PlayerControlSystem.h  RenderRigidBody.h  SpriteRenderSystem.h
include/world/: Chunk.h  DrawChunkGrid.h  World.h
source/: Main.cpp
source/core/: Block.cpp  BlockRegisrty.cpp  Chunk.cpp  Sprite.cpp  SpriteManager.cpp  Texture2DAtlas.cpp  World.cpp
source/game/: Game.cpp  GameState.cpp
source/listeners/: CollisionListener.cpp
source/scenes/: GameScene.cpp  StartScene.cpp
source/systems/: CameraSystem.cpp  CharacterControlSystem.cpp  SpriteRenderSystem.cpp
source/world/: Chunk.cpp  World.cpp
src/: main.cpp
src/core/: SpriteManager.cpp  globals.cpp  sprite.cpp  sprite_manger.cpp
src/game/: BlockInfo.cpp  block_info.cpp  game.cpp
src/game/world/: chunk.cpp  generator.cpp  world.cpp
src/systems/: PlayerSys.cpp  RigidBodySys.cpp  rigidbody_col_sys.cpp
src/util/debug/: DrawDebug.cpp
